Fixing case name in configuration files

--- a/OF/incompressible/simpleFoam/pitzDaily/config
+++ b/OF/incompressible/simpleFoam/pitzDaily/config
@@ -7,6 +7,9 @@
 \*---------------------------------------------------------------------------*/
 // * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * //
 
+name            pitzDaily;
+
+
 // CFD Model
 
 Ux              10.0;
@@ -26,22 +29,22 @@ epsilon         #calc "pow(0.09,0.75)*pow($k,1.5)/$mixingLength";
 
 // Workflow
 
-UMin 1.0;
+UMin            1.0;
 
-UMax 20.0;
+UMax            20.0;
 
-UStep 0.5;
+UStep           0.5;
 
-nuMin 0.000005;
+nuMin           0.000005;
 
-nuMax 0.0001;
+nuMax           0.0001;
 
-nuStep 5e-06;
+nuStep          5e-06;
 
 
 // ROM Tests
 
-nTests 780;
+nTests          780;
 
 
 // ************************************************************************* //
