--- a/OF/incompressible/simpleFoam/flowAroundObstacles/config
+++ b/OF/incompressible/simpleFoam/flowAroundObstacles/config
@@ -7,59 +7,61 @@
 \*---------------------------------------------------------------------------*/
 // * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * //
 
+name               flowAroundObstacles;
+
 // CFD Model
 
-boxHeight       128;
+boxHeight          128;
 
-boxLength       256;
+boxLength          256;
 
-cellSize        1;
+cellSize           1;
 
-nCellsX         256;
+nCellsX            256;
 
-nCellsZ         128;
+nCellsZ            128;
 
-stlName         circle_35.408_13.490_0.stl;
+stlName            circle_35.408_13.490_0.stl;
 
 // Workflow
 
-Ux              0.075;
+Ux                 0.075;
 
 shapesPerParameter 6;
 
-sideMin         32;
+sideMin            32;
 
-sideMax         64;
+sideMax            64;
 
-dzMin           -16;
+dzMin              -16;
 
-dzMax           16;
+dzMax              16;
 
-angleMin        -90;
+angleMin           -90;
 
-angleMax        90;
+angleMax           90;
 
-UMin            0.075;
+UMin               0.075;
 
-UMax            0.075;
+UMax               0.075;
 
-UStep           0.075;
+UStep              0.075;
 
 // ML Training
 
-net             UNetEx;
+net                UNetEx;
 
-learningRate    0.001;
+learningRate       0.001;
 
-kernelSize      5;
+kernelSize         5;
 
-epochs          1000;
+epochs             1000;
 
-batchSize       32;
+batchSize          32;
 
-filters         "8,16,32,32";
+filters            "8,16,32,32";
 
-nTests          10;
+nTests             10;
 
 
 // ************************************************************************* //
